--- a/environment.yml
+++ b/environment.yml
@@ -7,13 +7,19 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - blinker=1.9.0
   - brotli-python=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2024.12.31
   - certifi=2024.12.14
   - charset-normalizer=3.3.2
+  - click=8.1.8
   - expat=2.6.4
+  - flask=3.1.0
   - idna=3.7
+  - importlib-metadata=8.5.0
+  - itsdangerous=2.2.0
+  - jinja2=3.1.5
   - ld_impl_linux-64=2.40
   - libffi=3.4.4
   - libgcc=14.2.0
@@ -22,6 +28,7 @@ dependencies:
   - libmpdec=4.0.0
   - libstdcxx-ng=11.2.0
   - libuuid=1.41.5
+  - markupsafe=3.0.2
   - ncurses=6.4
   - openssl=3.4.0
   - pip=24.2
@@ -36,8 +43,10 @@ dependencies:
   - tk=8.6.14
   - tzdata=2024b
   - urllib3=2.2.3
+  - werkzeug=3.1.3
   - wheel=0.44.0
   - xz=5.4.6
+  - zipp=3.21.0
   - zlib=1.2.13
   - pip:
       - ibm-cloud-sdk-core==3.22.1
