--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - astroid=3.3.8
   - blinker=1.9.0
   - brotli-python=1.0.9
   - bzip2=1.0.8
@@ -14,10 +15,13 @@ dependencies:
   - certifi=2024.12.14
   - charset-normalizer=3.3.2
   - click=8.1.8
+  - colorama=0.4.6
+  - dill=0.3.8
   - expat=2.6.4
   - flask=3.1.0
   - idna=3.7
   - importlib-metadata=8.5.0
+  - isort=5.13.2
   - itsdangerous=2.2.0
   - jinja2=3.1.5
   - ld_impl_linux-64=2.40
@@ -29,9 +33,12 @@ dependencies:
   - libstdcxx-ng=11.2.0
   - libuuid=1.41.5
   - markupsafe=3.0.2
+  - mccabe=0.7.0
   - ncurses=6.4
   - openssl=3.4.0
   - pip=24.2
+  - platformdirs=3.10.0
+  - pylint=3.3.3
   - pysocks=1.7.1
   - python=3.13.1
   - python-dotenv=1.0.1
@@ -41,6 +48,9 @@ dependencies:
   - setuptools=75.1.0
   - sqlite=3.45.3
   - tk=8.6.14
+  - tomli=2.0.1
+  - tomlkit=0.13.2
+  - typing_extensions=4.12.2
   - tzdata=2024b
   - urllib3=2.2.3
   - werkzeug=3.1.3
